# rust_audio_server

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker_build_ubuntu.bat  docker_build_ubuntu.sh
create_base_ubuntu_docker_image/: Dockerfile  README.md
playlists/: demo_ode-to-joy-gap1.txt  demo_ode-to-joy-gap2.txt  demo_ode-to-joy.txt
src/: audio.rs  file_io.rs  main.rs  routes.rs  structs.rs
src/routes/: batch_files.rs  info.rs  list.rs  ping.rs  play.rs  playlists.rs  startnewlog.rs  tone.rs
