[package]
name = "rust_audio_server"
version = "0.3.0"
edition = "2021"
authors = ["Cody Nhan Pham"]
description = "An audio server that plays and logs audio files on the host machine upon GET requests. Compatible with Windows (10+) and Linux (Ubuntu 14.04+, yes, trusty!). MacOS was not tested."
readme = "README.md"
repository = "https://github.com/codynhanpham/rust-audio-server/"
license = "MIT OR Apache-2.0"
keywords = ["audio", "rust", "rest", "api", "rodio", "actix-web"]
categories = ["command-line-utilities", "multimedia::audio", "filesystem"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
rodio = "0.12.0"
hound = "3.5.1"
serde = { version = "1.0.193", features = ["derive"] }
chrono = "0.4.31"
lazy_static = "1.4.0"
zip = "0.6.6"
local-ip-address = "0.5.6"

[profile.release]
opt-level = 3
lto = true